# sandman

./: .editorconfig  .env.dev  .gitattributes  .gitignore  .pre-commit-config.yaml  CODING-STANDARDS.md  LICENSE.txt  README.md  docker-compose.dev.yml  sandman.sh
.github/workflows/: clang_tidy.yaml  cmake_build.yaml  pre-commit.yml  website.yaml
docker/: Dockerfile  buildDocker.sh  runDocker.sh  run_alpine_gpio_docker.sh  startup.sh
ha_bridge/: device.db-2020-01-20-18-02-25.bk  device.db-2020-03-18-11-15-19.bk
node_red/: sandman_flows.json
pocketsphinx/: Makefile.in  aclocal.m4  configure
pocketsphinx/doc/: Makefile.in
pocketsphinx/include/: Makefile.in
pocketsphinx/model/: Makefile.in
pocketsphinx/model/hmm/: Makefile.in
pocketsphinx/model/lm/: Makefile.in
pocketsphinx/python/: Makefile.in
pocketsphinx/scripts/: Makefile.in
pocketsphinx/src/: Makefile.in
pocketsphinx/src/gst-plugin/: Makefile.in
pocketsphinx/src/libpocketsphinx/: Makefile.in
pocketsphinx/src/programs/: Makefile.in
pocketsphinx/test/: Makefile.in
pocketsphinx/test/regression/: Makefile.in
pocketsphinx/test/unit/: Makefile.in
rhasspy/: docker-compose.yml  sandman_rhasspy_docker.txt  sandman_rhasspy_sentences.txt
sandman/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  Makefile.am  Makefile.in  TODO.txt  config.h.in  configure  configure.ac  sandman.sln  sandman.vcxproj  sandman.vcxproj.filters
sandman/data/: CMakeLists.txt  Makefile.am  Makefile.in  corpus.txt  example.rtn  example.sched  invalid_json.rtn  sandman.conf  sandman.rtn  sandman.sched
sandman/data/dict/en_US/: sandman.dic
sandman/data/lm/en_US/: sandman.lm
sandman/docker/: Dockerfile  buildDocker.sh  runDocker.sh
sandman/source/: CMakeLists.txt  Makefile.am  Makefile.in  char_buffer.h  command.cpp  command.h  common.h  config.cpp  config.h  control.cpp  control.h  gpio.cpp  gpio.h  input.cpp  input.h  logger.cpp  logger.h  logger.inl  logger_global.inl  logger_local.inl  main.cpp  mqtt.cpp  mqtt.h  ncurses_context.cpp  ncurses_context.h  ncurses_ui.cpp  ncurses_ui.h  notification.cpp  notification.h  reports.cpp  reports.h  routines.cpp  schedule.cpp  schedule.h  serial_connection.cpp  serial_connection.h  shell.cpp  shell.h  shell_attr.h  shell_attributes.h  (+10 more)
sandman/source/common/: ascii.h  box.h  char_buffer.h  enum.h  find.h  forward_alias.h  get_local_time.h  implicitly.h  non_null.h  stack.h  string.h  time_util.h
sandman/source/shell/: attributes.h  input_window_eventful_buffer.h
sandman/tests/: CMakeLists.txt  char_buffer.cpp  test_common_string.cpp  test_shell_input_window_buffer.cpp  tests.cpp
sandman_micro/: main.cpp
sandman_web/: .pre-commit-config.yaml  Dockerfile  manage.py  pyproject.toml  requirements.txt
sandman_web/sandman_web/: __init__.py  reports.py
sandman_web/sandman_web/reports/: reports.py
sandman_web/sandman_web/reports/static/: report_style.css
sandman_web/sandman_web/reports/templates/: report.html  reports.html
sandman_web/sandman_web/static/: report_style.css  style.css
sandman_web/sandman_web/status/: status.py
sandman_web/sandman_web/status/templates/: status.html
sandman_web/sandman_web/templates/: base.html
sandman_web/sandman_web/templates/reports/: report.html
sphinxbase/: Makefile.in  aclocal.m4  configure
sphinxbase/doc/: Makefile.in
sphinxbase/include/: Makefile.in  config.h.in  sphinx_config.h
sphinxbase/include/sphinxbase/: Makefile.in
sphinxbase/python/: Makefile.in  sphinxbase.c
sphinxbase/src/: Makefile.in
sphinxbase/src/libsphinxad/: Makefile.in
sphinxbase/src/libsphinxbase/: Makefile.in
sphinxbase/src/libsphinxbase/fe/: Makefile.in
sphinxbase/src/libsphinxbase/feat/: Makefile.in
sphinxbase/src/libsphinxbase/lm/: Makefile.in
sphinxbase/src/libsphinxbase/util/: Makefile.in
sphinxbase/src/sphinx_adtools/: Makefile.in
sphinxbase/src/sphinx_cepview/: Makefile.in
sphinxbase/src/sphinx_fe/: Makefile.in
sphinxbase/src/sphinx_jsgf2fsg/: Makefile.in
sphinxbase/src/sphinx_lmtools/: Makefile.in
sphinxbase/test/: Makefile.in
sphinxbase/test/regression/: Makefile.in
sphinxbase/test/unit/: Makefile.in
sphinxbase/test/unit/test_ad/: Makefile.in
sphinxbase/test/unit/test_alloc/: Makefile.in
sphinxbase/test/unit/test_bitvec/: Makefile.in
sphinxbase/test/unit/test_case/: Makefile.in
sphinxbase/test/unit/test_cmdln/: Makefile.in
sphinxbase/test/unit/test_fe/: Makefile.in
sphinxbase/test/unit/test_feat/: Makefile.in
sphinxbase/test/unit/test_fsg/: Makefile.in
sphinxbase/test/unit/test_hash/: Makefile.in
sphinxbase/test/unit/test_logmath/: Makefile.in
sphinxbase/test/unit/test_matrix/: Makefile.in
sphinxbase/test/unit/test_ngram/: Makefile.in
sphinxbase/test/unit/test_string/: Makefile.in
sphinxbase/test/unit/test_thread/: Makefile.in
sphinxbase/test/unit/test_util/: Makefile.in
