sandmandatadir = $(datadir)/sandman
nobase_dist_sandmandata_DATA = audio/elev_moving_down.wav audio/elev_stop.wav audio/elev_moving_up.wav \
	audio/head_moving_down.wav audio/head_stop.wav audio/head_moving_up.wav \
	audio/initialized.wav audio/knee_moving_down.wav audio/knee_stop.wav audio/knee_moving_up.wav \
	audio/sched_start.wav audio/sched_stop.wav \
	audio/vol_down.wav audio/vol_max.wav audio/vol_min.wav audio/vol_mute.wav audio/vol_unmute.wav audio/vol_up.wav \
	dict/en_US/sandman.dic hmm/en_US/hub4wsj_sc_8k/noisedict \
	hmm/en_US/hub4wsj_sc_8k/means hmm/en_US/hub4wsj_sc_8k/mdef \
	hmm/en_US/hub4wsj_sc_8k/feat.params hmm/en_US/hub4wsj_sc_8k/transition_matrices \
	hmm/en_US/hub4wsj_sc_8k/sendump hmm/en_US/hub4wsj_sc_8k/variances lm/en_US/sandman.lm
sandmanconfdir = $(sysconfdir)/sandman
nobase_dist_sandmanconf_DATA = sandman.conf
sandmantempdir = $(localstatedir)/sandman
nobase_dist_sandmantemp_DATA = sandman.log
