sandmandatadir = $(datadir)/sandman
nobase_dist_sandmandata_DATA = audio/back_moving_down.wav audio/back_stop.wav audio/back_moving_up.wav \
	audio/control_connect.wav audio/control_connected.wav audio/control_disconnect.wav \
	audio/elev_moving_down.wav audio/elev_stop.wav audio/elev_moving_up.wav \
	audio/initialized.wav audio/legs_moving_down.wav audio/legs_stop.wav audio/legs_moving_up.wav \
	audio/running.wav audio/sched_running.wav audio/sched_start.wav audio/sched_stop.wav \
	audio/vol_down.wav audio/vol_max.wav audio/vol_min.wav audio/vol_mute.wav audio/vol_unmute.wav audio/vol_up.wav 
sandmanconfdir = $(sysconfdir)/sandman
nobase_dist_sandmanconf_DATA = sandman.conf sandman.sched
sandmantempdir = $(localstatedir)/sandman
nobase_dist_sandmantemp_DATA = reports/sandman.rpt sandman.log
